fix spacing in footer h2

--- a/css/app.css
+++ b/css/app.css
@@ -403,7 +403,7 @@ body {
 
 footer {
   text-align: center;
-  margin-top: 1em;
+  margin-top: 1.3em;
   margin-bottom: 1.8em; }
 
 footer p {
