--- a/shelf/styles/sass/application/_footer.scss
+++ b/shelf/styles/sass/application/_footer.scss
@@ -3,7 +3,7 @@ footer {
     text-align: center;
 
     // Layout
-    margin-top: 1em;
+    margin-top: 1.3em;
     margin-bottom: 1.8em;
 }
 
